# headscale-tui

./: .gitignore  Cargo.toml  README.md
src/: app.rs  config.rs  main.rs  messages.rs  theme.rs
src/api/: client.rs  types.rs
src/views/: apikeys.rs  mod.rs  nodes.rs  preauthkeys.rs  users.rs
