[package]
name = "heascale-tui"
version = "0.1.0"
edition = "2021"
description = "TUI client for Headscale management"
authors = ["heascale-tui contributors"]

[dependencies]
bubbletea-rs = "0.0.9"
anyhow = "1"
lipgloss-extras = { version = "0.1.1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
crossterm = "0.29"
